--- a/playbooks/deployment-playbook.yaml
+++ b/playbooks/deployment-playbook.yaml
@@ -3,12 +3,8 @@
   vars:
     git_clone_path: '/tmp/ansible-pac-test'
     tf_project_path: '/tmp/ansible-pac-test/terraform'
-    policy_as_code_plan_validation_url: "http://opa-opa.apps.pawaro.eastus.aroapp.io/v1/data/policyascode"
+    policy_as_code_plan_validation_url: "http://150.240.71.92:8181/v1/data/corp"
     git_repo_https_clone_url: "https://github.com/jem2305/ansible-pac-test.git"
-    azure_client_id: '{{ lookup("env", "AZURE_CLIENT_ID") }}'
-    azure_secret: '{{ lookup("env", "AZURE_SECRET") }}'
-    azure_tenant: '{{ lookup("env", "AZURE_TENANT") }}'
-    azure_subscription_id: '{{ lookup("env", "AZURE_SUBSCRIPTION_ID") }}'
 
   tasks:
     - name: Create empty terraform folder
@@ -33,12 +29,6 @@
         project_path: "{{ tf_project_path }}"
         state: present
         force_init: yes
-        variables: {
-          "ARM_SUBSCRIPTION_ID": "{{ azure_subscription_id }}",
-          "ARM_CLIENT_ID": "{{ azure_client_id }}",
-          "ARM_TENANT_ID": "{{ azure_tenant }}",
-          "ARM_CLIENT_SECRET": "{{ azure_secret }}"
-        }
       register: tfplan
 
     - name: Parse plan file
@@ -55,12 +45,12 @@
       ansible.builtin.uri:
         url: "{{ policy_as_code_plan_validation_url }}"
         method: POST
-        body: '{"input": {{ tfshow.stdout }} }'
+        body: '{"input": "tfplan":{ {{ tfshow.stdout }} } }'
         body_format: json
       check_mode: no
       register: validation_response
       failed_when:
-        - validation_response.json.result.terraform_plan_passes_validation == false
+        - validation_response.json.result.passes_validation == false
 
     - name: Print validation response
       debug:
