--- a/playbooks/cos-audit.yaml
+++ b/playbooks/cos-audit.yaml
@@ -3,11 +3,11 @@
   vars:
     audit_resource_group: default
     policy_as_code_plan_validation_url: "http://150.240.71.92:8181/v1/data/corp/policies"
-    IC_API_KEY: "{{ lookup('env', 'IC_API_KEY') }}"
     bucket_regions:
       - us-south
       - us-east
-    cos_bucket_names: []
+    IC_API_KEY: "{{ lookup('env', 'IC_API_KEY') }}"
+    IC_ACCOUNT_ID: "{{ lookup('env', 'IC_ACCOUNT_ID') }}"
 
   tasks:    
     - name: Get ID Token for IBM Cloud
@@ -67,11 +67,35 @@
         msg: "{{ item.matches }}"
       loop: "{{ bucket_names_xmlresp.results }}"
 
+    # After this task:
+    # cos_bucket_names = {
+    #   "us-east":["bucket1", "bucket2"],
+    #   "us-south":["bucket3", "bucket4"]
+    # }
     - name: Build a list of all the bucket names.
       set_fact:
-        cos_bucket_names: "{{ cos_bucket_names + item.matches }}"
+        cos_bucket_names: >-
+          {%- set results = dict() -%}
+          {%- for xml_res in bucket_names_xmlresp.results -%}
+            {%- set location = bucket_regions[ loop.index - 1 ] -%}
+            {%- set _ = results.__setitem__(location, []) -%}
+            {%- for bucket in xml_res.matches -%}
+              {%- set _ = results[location].append(bucket["{http://s3.amazonaws.com/doc/2006-03-01/}Name"]) -%}
+            {%- endfor -%}
+          {%- endfor -%}
+          {{ results }}
       loop: "{{ bucket_names_xmlresp.results }}"
 
-    - name: Print Bucket Names
-      ansible.builtin.debug:
-        msg: "{{ cos_bucket_names }}"
+    # - name: Get Access Groups for account
+    #   ansible.builtin.uri:
+    #     url: "https://iam.cloud.ibm.com/v1/policies?account_id={{ IC_ACCOUNT_ID }}&access_group_id=AccessGroupId-PublicAccess"
+    #     method: GET
+    #     return_content: yes
+    #     headers:
+    #       Authorization: "Bearer {{ ibmcloud_access_token }}"
+    #       Accept: application/json
+    #   register: access_groups_response
+
+    # - name: Print Access Groups
+    #   ansible.builtin.debug:
+    #     msg: "{{ access_groups_response.json }}"
