--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -24,8 +24,8 @@ jobs:
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
         with:
           registry: registry.redhat.io
-          username: ${{ env.RH_USER }}
-          password: ${{ env.RH_PASS }}
+          username: ${{ secrets.RH_USER }}
+          password: ${{ secrets.RH_PASS }}
 
       - name: Log in to the GitHub Container registry
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
