update workflow triggers

--- a/.github/workflows/build-and-push-ee.yaml
+++ b/.github/workflows/build-and-push-ee.yaml
@@ -3,6 +3,8 @@ name: Build and publish Execution Environment image
 on:
   push:
     branches: ['main']
+    paths:
+      - execution-environment/**
 
 env:
   REGISTRY: ghcr.io
