--- a/.github/workflows/build-and-push-policies.yaml
+++ b/.github/workflows/build-and-push-policies.yaml
@@ -3,6 +3,8 @@ name: Build and publish Policy Runtime (OPA) image
 on:
   push:
     branches: ['main']
+    paths:
+      - policies/**
 
 env:
   REGISTRY: ghcr.io
