--- a/playbooks/cloudant-audit.yaml
+++ b/playbooks/cloudant-audit.yaml
@@ -101,7 +101,7 @@
     - name: Create job templates for each policy violation
       awx.awx.job_template:
         # name: "{{ item.playbook.split('.') | first }}-{{ item.resource.etag.replace('\"', '').split('/') | last }}"
-        name: "{{ item.playbook.split('.') | first | split('/') | first }}-{{ lookup('community.general.random_string', length=6) }}"
+        name: "{{ item.playbook.split('.') | first | split('/') | last }}-{{ lookup('community.general.random_string', length=8, upper=false, special=false) }}"
         job_type: "run"
         organization: "Default"
         inventory: "Demo Inventory"
