--- a/.github/workflows/build-and-push-policies.yaml
+++ b/.github/workflows/build-and-push-policies.yaml
@@ -11,7 +11,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push-ee:
+  build-and-push-policies:
     runs-on: ubuntu-latest
     environment: default
     permissions:
